--- a/Thralldom.Web/less/grayscale.css
+++ b/Thralldom.Web/less/grayscale.css
@@ -2,12 +2,37 @@
   font-family: "Bulgaria Moderna";
   src: url("../fonts/Bulgaria_Moderna_Pro.otf") format("opentype");
 }
+@font-face {
+  font-family: "Franchise";
+  src: url("../fonts/Franchise-Bold-hinted.ttf") format('truetype');
+}
+@font-face {
+  font-family: "Nevis";
+  src: url("../fonts/Nevis.ttf") format('truetype');
+}
+.left {
+  margin-left: 0;
+  padding-left: 0 !important;
+  padding-bottom: 2px !important;
+}
+dl.faq dd {
+  text-indent: 20px;
+  font-size: 125%;
+  white-space: pre;
+}
+dl.faq dt {
+  font-size: 130%;
+}
 body {
   width: 100%;
   height: 100%;
-  font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: #ffffff;
   background-color: #000000;
+}
+body.boxed {
+  width: 95%;
+  margin-left: 3%;
 }
 html {
   width: 100%;
@@ -24,6 +49,10 @@ h6 {
   font-family: "Bulgaria Moderna", "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
+}
+.casual {
+  font-family: "Nevis";
+  font-size: 200%;
 }
 p {
   margin: 0 0 25px;
