--- a/Thralldom.Web/less/grayscale.less
+++ b/Thralldom.Web/less/grayscale.less
@@ -12,6 +12,36 @@
   font-family: "Bulgaria Moderna";
   src: url("../fonts/Bulgaria_Moderna_Pro.otf") format("opentype");
 }
+@font-face {
+    font-family: "Franchise";
+    src: url("../fonts/Franchise-Bold-hinted.ttf") format('truetype');
+}
+@font-face {
+    font-family: "Nevis";
+    src: url("../fonts/Nevis.ttf") format('truetype');
+}
+
+// Font vars
+
+@casual-header-font: "Nevis";
+
+// Helper classes
+.left {
+    margin-left: 0;
+    padding-left: 0 !important;
+    padding-bottom: 2px !important;
+}
+
+dl.faq dd {
+    text-indent: 20px;
+    font-size: 125%;
+    white-space:pre;
+}
+dl.faq dt {
+    font-size: 130%;
+}
+dl.faq dd:after {
+}
 
 // Some mixins for links
 
@@ -31,9 +61,14 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Helvetica,Arial,sans-serif;
     color: @light;
     background-color: @dark;
+}
+
+body.boxed {
+    width: 95%;
+    margin-left: 3%;
 }
 
 html {
@@ -54,6 +89,11 @@ h6 {
     font-family: "Bulgaria Moderna", "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+
+}
+.casual {
+    font-family: @casual-header-font;
+    font-size: 200%;
 }
 
 p {
