--- a/ProjectThralldom/app.css
+++ b/ProjectThralldom/app.css
@@ -14,12 +14,19 @@ body {
 body {
   font-family: "Segoe UI", sans-serif;
 }
+
+canvas {
+    background-color: black;
+}
+
 .maximized {
   position: absolute;
   top: 0%;
   left: 0%;
   right: 0%;
   bottom: 0%;
+  width: 100%;
+  height: 100%;
 }
 .unselectable {
   -moz-user-select: -moz-none;
@@ -132,4 +139,53 @@ nav pre {
 }
 .cursor-hidden {
   cursor: url(Images/blank.cur), default;
+}
+
+
+/* Storytelling */
+
+.fadeout {
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+  -webkit-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.fadein {
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  -webkit-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.story {
+	background-color: black;
+	position: absolute;
+	left: 0%;
+	top: 0%;
+	bottom: 0%;
+	right: 0%;
+	text-align: center;
+	color: white;
+	font-family: "Segoe UI";
+	font-size: 3em;
+    
+}
+
+.story span {
+    margin-top: 25%;
+}
+
+#particle-canvas {
+    position: absolute;
+    top: 30%;
+    left: 20%;
 }
