--- a/Thralldom.Web/less/grayscale.css
+++ b/Thralldom.Web/less/grayscale.css
@@ -346,3 +346,4 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+/*# sourceMappingURL=grayscale.css.map */
