--- a/ProjectThralldom/app.less
+++ b/ProjectThralldom/app.less
@@ -64,6 +64,10 @@ canvas {
         }
         &.fadein {
             display: block;
+            &:before {
+                content: attr(data-content);
+                margin-left: 40px;
+            }
         }
     }
 
@@ -79,7 +83,6 @@ canvas {
         letter-spacing: 5px;
 
         &:hover {
-            font-size: 110%;
             color: lighten(black, 35%);
         }
         &:active {
@@ -89,6 +92,7 @@ canvas {
 
     ul {
         list-style-type: none;
+        margin-top: 10px;
 
         li {
             text-align: left;
