--- a/Thralldom.Web/less/grayscale.css
+++ b/Thralldom.Web/less/grayscale.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Bulgaria Moderna";
-  src: url("../fonts/Bulgaria_Moderna_Pro.otf") format("opentype");
+  src: url('../fonts/bulgaria_moderna_pro-webfont.woff');
 }
 @font-face {
   font-family: "Franchise";
