--- a/Thralldom.Web/less/grayscale.less
+++ b/Thralldom.Web/less/grayscale.less
@@ -10,8 +10,9 @@
 // Extra fonts
 @font-face {
   font-family: "Bulgaria Moderna";
-  src: url("../fonts/Bulgaria_Moderna_Pro.otf") format("opentype");
+	src: url('../fonts/bulgaria_moderna_pro-webfont.woff');
 }
+
 @font-face {
     font-family: "Franchise";
     src: url("../fonts/Franchise-Bold-hinted.ttf") format('truetype');
