Updated libraries. Fixed a bug in deployment tool. Several minor inconsistencies fixed.

--- a/ProjectThralldom/app.css
+++ b/ProjectThralldom/app.css
@@ -1,4 +1,4 @@
-html,
+﻿html,
 body {
   width: 100%;
   height: 100%;
@@ -221,4 +221,3 @@ nav pre {
   top: 30%;
   left: 20%;
 }
-/*# sourceMappingURL=app.css.map */
