--- a/ProjectThralldom/app.less
+++ b/ProjectThralldom/app.less
@@ -210,8 +210,6 @@ nav {
 /* Storytelling */
 
 .fadeout {
-    -webkit-opacity: 0 !important;
-    -moz-opacity: 0 !important;
     opacity: 0 !important;
 
     -webkit-transition: all @anim-transition-duration linear;
@@ -221,8 +219,6 @@ nav {
 }
 
 .fadein {
-    -webkit-opacity: 1 !important;
-    -moz-opacity: 1 !important;
     opacity: 1 !important;
     -moz-transition: all @anim-transition-duration linear step-start;
     -o-transition: all @anim-transition-duration linear step-start;
@@ -251,4 +247,41 @@ nav {
     position: absolute;
     top: 30%;
     left: 20%;
+}
+
+/* Help text */
+
+.keyboard-button {
+    border: 1px solid gray;
+    padding: 1px 5px;
+    margin: 0 5px;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    box-shadow: 1px 0 1px 0 #fff, 0 2px 0 2px lightGray, 0 2px 0 3px #333;
+
+    border-radius: 3px;
+    @color1: #FFF;
+    @color2: #E2E2E2; 
+    @gradientstop: 25%;
+    background: -moz-linear-gradient(left, @color1 0%, @color2 @gradientstop);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, @color1), color-stop(@gradientstop, @color2));
+    background: -webkit-linear-gradient(left, @color1 0%, @color2 @gradientstop);
+    background: -o-linear-gradient(left, @color1 0%, @color2 @gradientstop);
+    background: -ms-linear-gradient(left, @color1 0%, @color2 @gradientstop);
+    background: linear-gradient(left, @color1 0%, @color2 @gradientstop);
+}
+
+#help-info {
+    position: absolute;
+    width: 100%;
+    bottom: 15%;
+    text-align: center;
+    color: white;
+    z-index: @max-z-index;
+    text-shadow: 5px 0px 10px #000;
+    span {
+        .keyboard-button;
+        color: black;
+        text-shadow: none;
+    }
 }
