--- a/ProjectThralldom/app.less
+++ b/ProjectThralldom/app.less
@@ -297,3 +297,37 @@ nav {
         text-shadow: none;
     }
 }
+
+#alerts {
+    text-align: center;
+    margin: 0 auto 0 auto;
+    width: 800px;
+}
+
+#alerts ul {
+    padding: 0;
+    margin: 0;
+}
+
+#alerts ul li {
+    border-radius: 5px;
+    list-style-type: none;
+    padding: 10px;
+    width: 100%;
+    opacity: 0.8;
+    font-size: 35px;
+    font-weight: bold;
+    text-shadow: 3px 3px #000000;
+}
+
+.error {
+    color: #d9534f;
+}
+
+.warning {
+    color: #f0ad4e;
+}
+
+.info {
+    color: #31b0d5;
+}
