Refactored script parsing. Refactored quests and scripts subsystems. Added a GatherObjective and a sample scene. Moved several array utilities as extensions.

--- a/ProjectThralldom/app.less
+++ b/ProjectThralldom/app.less
@@ -108,7 +108,7 @@ canvas {
         img {
             width: 48px;
             height: 48px;
-            margin-left: 100px;
+            margin-left: 100px; 
         }
         
         :hover {
@@ -302,22 +302,20 @@ nav {
     text-align: center;
     margin: 0 auto 0 auto;
     width: 800px;
-}
-
-#alerts ul {
-    padding: 0;
-    margin: 0;
-}
-
-#alerts ul li {
-    border-radius: 5px;
-    list-style-type: none;
-    padding: 10px;
-    width: 100%;
-    opacity: 0.8;
-    font-size: 35px;
-    font-weight: bold;
-    text-shadow: 3px 3px #000000;
+    ul {
+        padding: 0;
+        margin: 0;
+        li {
+            border-radius: 5px;
+            list-style-type: none;
+            padding: 10px;
+            width: 100%;
+            opacity: 0.8;
+            font-size: 35px;
+            font-weight: bold;
+            text-shadow: 3px 3px 9px #000000;
+        }
+    }
 }
 
 .error {
