--- a/ProjectThralldom/app.css
+++ b/ProjectThralldom/app.css
@@ -281,7 +281,7 @@ nav pre {
   opacity: 0.8;
   font-size: 35px;
   font-weight: bold;
-  text-shadow: 3px 3px #000000;
+  text-shadow: 3px 3px 9px #000000;
 }
 .error {
   color: #d9534f;
@@ -292,4 +292,3 @@ nav pre {
 .info {
   color: #31b0d5;
 }
-/*# sourceMappingURL=app.css.map */
